--- a/qa.html
+++ b/qa.html
@@ -261,10 +261,11 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingFifteen">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseF 15. Xuất hoá đơn sai thông tin khách hàng (sai thông tin, sai địa chỉ, sai tên đơn vị...) có sửa trên phần mềm được không?
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
+                        15. Xuất hoá đơn sai thông tin khách hàng (sai thông tin, sai địa chỉ, sai tên đơn vị...) có sửa trên phần mềm được không?
                     </button>
                 </h2>
-                <div id="collapseFifteen" class="accordion-collapse collapse" aria-labelledby="headingFifteen" data-bs-parent="#qaAccordion">
+                <div id="collapseFourteen" class="accordion-collapse collapse" aria-labelledby="headingFourteen" data-bs-parent="#qaAccordion">
                     <div class="accordion-body">
                         <p><strong>Nguyên nhân:</strong> Nhập sai thông tin người mua hàng.</p>
                         <p><strong>Giải pháp:</strong> Làm điều chỉnh/ thay thế bên trang hoá đơn</p>
@@ -302,7 +303,7 @@
                 .then(response => response.json())
                 .then(data => {
                     const ip = data.ip;
-                    document.getElementById('ipInfo').innerHTML = `IP máy tính của bạn là: ${ip} - Để kiểm tra cổng 25123, vui lòng truy cập <a href="https://canyouseeme.org" target="_blank">CanYouSeeMe.org</a> và nhập IP và cổng 25123.`;
+                    document.getElementById('ipInfo').innerHTML = `IP máy tính của bạn là: ${ip};
                 })
                 .catch(error => {
                     document.getElementById('ipInfo').innerHTML = 'Không thể lấy thông tin IP.';
