--- a/qa.html
+++ b/qa.html
@@ -261,11 +261,11 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingFifteen">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
                         15. Xuất hoá đơn sai thông tin khách hàng (sai thông tin, sai địa chỉ, sai tên đơn vị...) có sửa trên phần mềm được không?
                     </button>
                 </h2>
-                <div id="collapseFourteen" class="accordion-collapse collapse" aria-labelledby="headingFourteen" data-bs-parent="#qaAccordion">
+                <div id="collapseFifteen" class="accordion-collapse collapse" aria-labelledby="headingFifteen" data-bs-parent="#qaAccordion">
                     <div class="accordion-body">
                         <p><strong>Nguyên nhân:</strong> Nhập sai thông tin người mua hàng.</p>
                         <p><strong>Giải pháp:</strong> Làm điều chỉnh/ thay thế bên trang hoá đơn</p>
