--- a/index.html
+++ b/index.html
@@ -295,11 +295,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            // Set current year
-            document.getElementById('currentYear').textContent = new Date().getFullYear();
-            
-            // Fetch IP
-            fetch('https://api.ipify.org?format=json')
+            // Fetch IP using a faster and more reliable API
+            fetch('https://api.myip.com')
                 .then(response => response.json())
                 .then(data => {
                     const ip = data.ip;
