--- a/index.html
+++ b/index.html
@@ -295,11 +295,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            // Fetch IP using a faster and more reliable API
-            fetch('https://api.myip.com')
-                .then(response => response.json())
-                .then(data => {
-                    const ip = data.ip;
+            // Fetch IP using ifconfig.me
+            fetch('https://ifconfig.me/ip')
+                .then(response => response.text())
+                .then(ip => {
                     document.getElementById('ipInfo').innerHTML = `<h1><strong>Thông tin IP WAN</strong>: <span style="color: red;">${ip}</span></h1>`;
                 })
                 .catch(error => {
